--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 html {
-  font-size: 100%; /* 1rem = 16px by default */
+  font-size: 100%; 
   scroll-behavior: smooth;
 }
 
 * {
   margin: 0;
-  padding: 0.3rem; /* was 5px */
+  padding: 0.3rem;
   box-sizing: border-box;
   list-style: none;
   
@@ -37,7 +37,7 @@ a {
 
 .section {
   padding: 9rem; 
-  border: black solid 0.3rem; /* was 5px */
+  border: black solid 0.3rem; 
 }
 
 .site-header {
@@ -51,13 +51,13 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 5rem; /* was 80px */
+  height: 5rem; 
   padding: 0 2rem;
 }
 
 .header-container ul {
   display: flex;
-  gap: 1.25rem; /* was 20px */
+  gap: 1.25rem; 
 }
 
 .nav li {
