--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 * {
   margin: 0;
-  padding: 0.3rem;
+  padding: 0.2rem;
   box-sizing: border-box;
   list-style: none;
 }
@@ -35,7 +35,7 @@ a {
 }
 
 .section {
-  padding: 9rem; 
+  padding: 3rem 1rem; 
   border: black solid 0.3rem; 
 }
 
