--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 * {
   margin: 0;
-  padding: 0;
+  padding: 0;  /* 🔹 Removed the global padding */
   box-sizing: border-box;
   list-style: none;
 }
@@ -35,23 +35,17 @@ a {
 }
 
 .section {
-  padding: 3rem 1rem; 
+  padding: 6rem 2rem;  /* 🔹 Balanced padding */
   border: black solid 0.3rem; 
 }
 
 .site-header {
-  position: fixed;
+  position: sticky;
   top: 0;
-  left: 0;
-  width: 100%;
   z-index: 1000;
   background-color: white;
+  border-bottom: 0.2rem solid black;
 }
-
-main {
-  padding-top: 5rem; /* same as header height */
-}
-
 
 .header-container {
   display: flex;
@@ -70,6 +64,7 @@ main {
 
 .nav li {
   transition: background-color 0.3s ease, transform 0.2s ease; 
+  padding: 0.3rem 0.6rem;
 }
 
 .nav li:hover {
@@ -226,7 +221,6 @@ p {
   border-right: none; /* Remove divider on small screens */
   padding-right: 0;
   margin-bottom: 1rem;
-  border-right: 3px solid black;
 }
 
 footer {
@@ -239,7 +233,7 @@ footer {
 /* 🔹 Responsive Styles */
 @media (max-width: 768px) {
   .section {
-    padding: 3rem 1rem;
+    padding: 3rem 1rem; /* 🔹 smaller padding on phone */
   }
 
   .discription {
