--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ p {
 .card img {
   height: 11.25rem; 
   width: 100%;
-  
+  object-fit: cover;
   
 }
 
@@ -208,7 +208,7 @@ p {
 }
 
 .chips img {
-  max-width: 4rem;   
+  max-width: 3rem;   
   height: auto;
 }
 
