--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ p {
   justify-content: center;
   font-size: 1.3rem;
   text-indent: 2em;
-  text-align: justify;
+  text-align: center;
   gap: 1rem;
 }
 
