--- a/style.css
+++ b/style.css
@@ -163,6 +163,11 @@ p {
   border: black solid 0.3rem;
 }
 
+.projects-container h2{
+  text-align: center;
+
+}
+
 .cards {
   display: flex;
   flex-wrap: wrap;
