--- a/style.css
+++ b/style.css
@@ -240,13 +240,14 @@ p {
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  text-align: center;
+  
 
 }
 
 .contact-container h2 {
   font-size: 2rem;
   margin-bottom: 1rem;
+  border-right: 3px black solid;
 }
 
 
@@ -325,5 +326,9 @@ footer {
 
   .contact-container {
     flex-direction: column;
+  }
+
+  .contact-container h2{
+    border-right: 0;
   }
 }
